--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,69 @@
-nibabel
-matplotlib
-Pillow
-numpy
-pandas
-xlrd
+appnope==0.1.4
+asttokens==3.0.1
+beautifulsoup4==4.14.3
+certifi==2026.1.4
+cffi==2.0.0
+charset-normalizer==3.4.4
+comm==0.2.3
+contourpy==1.3.2
+cryptography==46.0.3
+cycler==0.12.1
+debugpy==1.8.19
+decorator==5.2.1
+exceptiongroup==1.3.1
+executing==2.2.1
+fonttools==4.61.1
+google==3.0.0
+google-api-core==2.29.0
+google-auth==2.48.0
+google-cloud==0.34.0
+google-cloud-core==2.5.0
+google-cloud-storage==3.8.0
+google-crc32c==1.8.0
+google-resumable-media==2.8.0
+googleapis-common-protos==1.72.0
+idna==3.11
+importlib_resources==6.5.2
+ipykernel==7.1.0
+ipython==8.38.0
+jedi==0.19.2
+jupyter_client==8.8.0
+jupyter_core==5.9.1
+kiwisolver==1.4.9
+matplotlib==3.10.8
+matplotlib-inline==0.2.1
+nest-asyncio==1.6.0
+nibabel==5.3.3
+numpy==2.2.6
+packaging==26.0
+pandas==2.3.3
+parso==0.8.5
+pexpect==4.9.0
+pillow==12.1.0
+platformdirs==4.5.1
+prompt_toolkit==3.0.52
+proto-plus==1.27.0
+protobuf==6.33.4
+psutil==7.2.1
+ptyprocess==0.7.0
+pure_eval==0.2.3
+pyasn1==0.6.2
+pyasn1_modules==0.4.2
+pycparser==3.0
+Pygments==2.19.2
+pyparsing==3.3.2
+python-dateutil==2.9.0.post0
+pytz==2025.2
+pyzmq==27.1.0
+requests==2.32.5
+rsa==4.9.1
+six==1.17.0
+soupsieve==2.8.3
+stack-data==0.6.3
+tornado==6.5.4
+traitlets==5.14.3
+typing_extensions==4.15.0
+tzdata==2025.3
+urllib3==2.6.3
+wcwidth==0.3.5
+xlrd==2.0.2
