--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,9 @@ debugpy==1.8.19
 decorator==5.2.1
 exceptiongroup==1.3.1
 executing==2.2.1
+filelock==3.20.3
 fonttools==4.61.1
+fsspec==2026.1.0
 google==3.0.0
 google-api-core==2.29.0
 google-auth==2.48.0
@@ -22,19 +24,26 @@ google-cloud-storage==3.8.0
 google-crc32c==1.8.0
 google-resumable-media==2.8.0
 googleapis-common-protos==1.72.0
+grad-cam==1.5.5
 idna==3.11
 importlib_resources==6.5.2
 ipykernel==7.1.0
 ipython==8.38.0
 jedi==0.19.2
+Jinja2==3.1.6
+joblib==1.5.3
 jupyter_client==8.8.0
 jupyter_core==5.9.1
 kiwisolver==1.4.9
+MarkupSafe==3.0.3
 matplotlib==3.10.8
 matplotlib-inline==0.2.1
+mpmath==1.3.0
 nest-asyncio==1.6.0
+networkx==3.6.1
 nibabel==5.3.3
-numpy==2.2.6
+numpy==1.26.4
+opencv-python==4.11.0.86
 packaging==26.0
 pandas==2.3.3
 parso==0.8.5
@@ -57,18 +66,22 @@ pytz==2025.2
 pyzmq==27.1.0
 requests==2.32.5
 rsa==4.9.1
+scikit-learn==1.8.0
+scipy==1.17.0
+seaborn==0.13.2
 six==1.17.0
 soupsieve==2.8.3
 stack-data==0.6.3
+sympy==1.14.0
+threadpoolctl==3.6.0
+torch==2.2.2
+torchvision==0.17.2
 tornado==6.5.4
+tqdm==4.67.3
 traitlets==5.14.3
+ttach==0.0.3
 typing_extensions==4.15.0
 tzdata==2025.3
 urllib3==2.6.3
 wcwidth==0.3.5
 xlrd==2.0.2
-scikit-learn
-grad-cam
-torch
-torchvision
-tensorflow
