--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
+annotated-doc==0.0.4
+annotated-types==0.7.0
+anyio==4.12.1
 appnope==0.1.4
 asttokens==3.0.1
 beautifulsoup4==4.14.3
 certifi==2026.1.4
 cffi==2.0.0
 charset-normalizer==3.4.4
+click==8.3.1
 comm==0.2.3
 contourpy==1.3.2
 cryptography==46.0.3
@@ -12,6 +16,7 @@ debugpy==1.8.19
 decorator==5.2.1
 exceptiongroup==1.3.1
 executing==2.2.1
+fastapi==0.128.4
 filelock==3.20.3
 fonttools==4.61.1
 fsspec==2026.1.0
@@ -25,6 +30,11 @@ google-crc32c==1.8.0
 google-resumable-media==2.8.0
 googleapis-common-protos==1.72.0
 grad-cam==1.5.5
+h11==0.16.0
+hf-xet==1.2.0
+httpcore==1.0.9
+httpx==0.28.1
+huggingface_hub==1.4.1
 idna==3.11
 importlib_resources==6.5.2
 ipykernel==7.1.0
@@ -59,19 +69,25 @@ pure_eval==0.2.3
 pyasn1==0.6.2
 pyasn1_modules==0.4.2
 pycparser==3.0
+pydantic==2.12.5
+pydantic_core==2.41.5
 Pygments==2.19.2
 pyparsing==3.3.2
 python-dateutil==2.9.0.post0
+python-multipart==0.0.22
 pytz==2025.2
+PyYAML==6.0.3
 pyzmq==27.1.0
 requests==2.32.5
 rsa==4.9.1
 scikit-learn==1.8.0
 scipy==1.17.0
 seaborn==0.13.2
+shellingham==1.5.4
 six==1.17.0
 soupsieve==2.8.3
 stack-data==0.6.3
+starlette==0.52.1
 sympy==1.14.0
 threadpoolctl==3.6.0
 torch==2.2.2
@@ -80,8 +96,11 @@ tornado==6.5.4
 tqdm==4.67.3
 traitlets==5.14.3
 ttach==0.0.3
+typer-slim==0.21.1
+typing-inspection==0.4.2
 typing_extensions==4.15.0
 tzdata==2025.3
 urllib3==2.6.3
+uvicorn==0.40.0
 wcwidth==0.3.5
 xlrd==2.0.2
