--- a/requirements.txt
+++ b/requirements.txt
@@ -52,7 +52,7 @@ mpmath==1.3.0
 nest-asyncio==1.6.0
 networkx==3.6.1
 nibabel==5.3.3
-numpy==1.26.4
+numpy
 opencv-python==4.11.0.86
 packaging==26.0
 pandas==2.3.3
@@ -90,8 +90,8 @@ stack-data==0.6.3
 starlette==0.52.1
 sympy==1.14.0
 threadpoolctl==3.6.0
-torch==2.2.2
-torchvision==0.17.2
+torch
+torchvision
 tornado==6.5.4
 tqdm==4.67.3
 traitlets==5.14.3
