--- a/.gitignore
+++ b/.gitignore
@@ -205,13 +205,14 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
 # Project Data (Keep local)
-data/raw/
-data/processed/
+data/raw/*
+data/processed/*
 
 # Models
 saved_models/
-models/
+models/*
 
 # Python Cache
 __pycache__/
